--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<footer><ul><li><a href="#" class="faq">FAQS</a></li><li><a href="#">Facebook</a></li><li><a href="#">Twitter</a></li><li><a href="#" class="copyright">Copyright &copy; Tambio 2015</a></li></ul></footer>
+<footer><ul><li><a href="#" class="faq">FAQS</a></li><li><a href="https://web.facebook.com/teamtambio">Facebook</a></li><li><a href="https://twitter.com/teamtambio">Twitter</a></li><li><p class="copyright">Copyright &copy; Tambio 2015</p></li></ul><p class="copyright left">Copyright &copy; Tambio 2015</p></footer>
