--- a/_jade/featured.jade
+++ b/_jade/featured.jade
@@ -1,17 +1,21 @@
 section.featured
-  h1.section-title Who Featured Us?
+  h1.section-title Articles Featuring Tambio
   
   ul.articles
-    li 
-      div.image 
+    a(href='#')
+      li
+        div.text 
+          h3 DEAL Streat Asia
+          p PH startup Tambio takes a chance on expansion
         
-      div.text 
-        h3 DEAL Streat Asia
-        p PH startup Tambio takes a chance on expansion
+    a(href='#')
+      li 
+        div.text 
+          h3 Inquirer
+          p Local startup scene gets boost from IdeaSpace
         
-    li 
-      div.image 
-        
-      div.text 
-        h3 Inquirer
-        p Local startup scene gets boost from IdeaSpace
+    a(href='#')
+      li 
+        div.text 
+          h3 Tech in Asia
+          p 10 new Philippine startups to watch out for
