--- a/_jade/footer.jade
+++ b/_jade/footer.jade
@@ -3,8 +3,11 @@ footer
     li
       a(href='#').faq FAQS
     li
-      a(href='#') Facebook
+      a(href='https://web.facebook.com/teamtambio') Facebook
     li
-      a(href='#') Twitter
+      a(href='https://twitter.com/teamtambio') Twitter
     li
-      a(href='#').copyright Copyright &copy; Tambio 2015
+      p.copyright Copyright &copy; Tambio 2015
+
+  p.copyright.left Copyright &copy; Tambio 2015
+  
