--- a/_jade/partner.jade
+++ b/_jade/partner.jade
@@ -1,4 +1,24 @@
 section.partner
-  h1.section-title Our Partner
+  h1.section-title Happy Clients
   
-  div.idea-img
+  ul.client-logos
+    li
+      img(src="/assets/images/client-logos/acesaatchi.png")
+    li
+      img(src="/assets/images/client-logos/mega.png")
+    li
+      img(src="/assets/images/client-logos/meralco.png")
+    li
+      img(src="/assets/images/client-logos/negros.png")
+    li
+      img(src="/assets/images/client-logos/pldt-alpha.png")
+    li
+      img(src="/assets/images/client-logos/pldt-sme.png")
+    li
+      img(src="/assets/images/client-logos/rwm.png")
+    li
+      img(src="/assets/images/client-logos/smart.png")
+    li
+      img(src="/assets/images/client-logos/sun.png")
+    li
+      img(src="/assets/images/client-logos/tv5.png")
