--- a/_jade/contact.jade
+++ b/_jade/contact.jade
@@ -7,7 +7,7 @@ section.contact
     div.row
       input(id="email", class="input", name="email", type="text", placeholder="Your Email")
     div.row
-      textarea(id="message", class="input", name="message", rows="7", cols="30", placeholder="Your Message")
+      textarea(id="message", class="input", name="message", rows="15", placeholder="Your Message")
     div.row
       input(id="submit_button", type="submit", value="SEND MESSAGE") 
   
