--- a/_jade/header.jade
+++ b/_jade/header.jade
@@ -2,11 +2,10 @@ section.header
   div.title
     div.logo
       img(src="assets/images/tambio-logo-small.png")
-    h1 Tambio 
+    div.title-img
+      img(src="assets/images/tambio.png")
+  div.description
     p An automatic raffle activation platform for both companies and customers
-  
-  div.action-button
-    a(href="#") LEARN MORE
     
 
   
