--- a/_jade/how.jade
+++ b/_jade/how.jade
@@ -1,11 +1,28 @@
 section.how
   h1.section-title How does tambio work?
   
-  div(style="background-image: url('assets/images/app.png');").how-image 
-  
-  div.how-description
-    h3 Easier to join Raffles 
-    p Quisque mollis, erat ac tincidunt convallis, massa arcu auctor dui, non lobortis diam lacus quis dolor. Donec facilisis quis tellus vel faucibus. Vestibulum condimentum augue eget quam tempor porta. 
-    
-  div.how-buttons
-    //TODO Add buttons
+  div.how-content
+    div.how-details
+      div.how-image 
+        img(src="assets/images/app.png")
+          
+      div.how-description
+        h3 GET CUSTOMERS TO JOIN
+        p Quisque mollis, erat ac tincidunt convallis, massa arcu auctor dui, non lobortis diam lacus quis dolor. Donec facilisis quis tellus vel faucibus. 
+      
+    div.how-buttons
+      a(href='#')
+        div#button
+          div.button-container
+            i(class="icon ion-pricetags")
+          h3 CREATE/ORGANIZE RAFFLE WITH TAMBIO
+      a(href='#')
+        div#button.active
+          div.button-container
+            i(class="icon ion-android-cart")
+          h3 GET CUSTOMERS TO JOIN
+      a(href='#')
+        div#button
+          div.button-container
+            i(class="icon ion-stats-bars")
+          h3 VIEW RAFFLE ANALYTICS REALTIME
