--- a/_jade/subtitle.jade
+++ b/_jade/subtitle.jade
@@ -1,2 +1,3 @@
 section.subtitle
-  p.subtitle Etiam quis volutpat ante. Duis eget elit vel enim hendrerit sagittis eget ac nisl. Maecenas vehicula viverra varius. Curabitur a ipsum quis augue faucibus pretium. 
+  img(src="assets/images/idea.png")
+ 
