--- a/assets/css/2-home/1-header.sass
+++ b/assets/css/2-home/1-header.sass
@@ -1,51 +1,130 @@
 .header
-  height: 415px
-  background-color: black
+  height: 468px
   background:
-    image: url("/assets/images/header.jpg")
+    image: url("/assets/images/tambio-header.jpg")
     size: cover
+    position: center
 
   .title
     color: white
 
+
     .logo
       position: relative
-      padding-top: 80px
+      padding-top: 115px
       padding-bottom: 20px
 
       img
-        width: 32px
-        height: 32px
+        width: 48px
+        height: 48px
         position: absolute
         left: 50%
         @include transform(translateX(-50%))
 
-    h1
-      margin: 5px
-      font-family: 'Quicksand'
-      letter-spacing: -2.67px
-      font-size: 40px
-      text-align: center
+    .title-img
+      position: relative
+      padding-top: 45px
 
+      img
+        width: 186px
+        position: absolute
+        left: 50%
+        @include transform(translateX(-50%))
+
+  .description
     p
+      color: white
       margin: 0px
+      margin-top: 82px
       // padding-left: 30px
       // padding-right: 30px
-      font-size: 16px
-      line-height: 20px
+      font-family: 'Quicksand'
+      font-weight: 300
+      font-size: 20px
+      line-height: 24px
+      letter-spacing: -1px
       text-align: center
 
-  div.action-button
-    position: relative
-    margin-top: 100px
+@media (min-width: 800px)
+  .header
+    .title
+      display: flex
+      width: 50%
+      padding-left: 30px
+      padding-top: 15%
 
-    a
-      position: absolute
-      left: 50%
-      @include transform(translateX(-50%))
-      text-decoration: none
-      color: white
-      font-size: 12px
-      border: 1px solid white
-      border-radius: 2px
-      padding: 5px 10px
+      .logo
+        padding-top: 0px
+
+        img
+          width: 52px
+          height: 52px
+          position: relative
+
+      .title-img
+        padding-top: 0px
+        padding-left: 10px
+
+        img
+          width: 200px
+          position: relative
+
+    .description
+      width: 50%
+      padding-left: 30px
+      p
+        margin-top: 0px
+        text-align: left
+
+
+@media (min-width: 1000px)
+  .header
+    height: 89vh
+
+    .title
+      padding-top: calc(89vh/3.5)
+      width: 100%
+
+      .logo
+        max-width: 600px
+
+        img
+          width: 75px
+          height: 75px
+
+      .title-img
+        max-width: 600px
+
+        img
+          height: 80px
+          width: auto
+
+    .description
+      width: 100%
+      p
+        padding-top: 1.55%
+        max-width: 600px
+        font-size: 36px
+        line-height: 40px
+        letter-spacing: -3px
+
+@media (min-width: 1000px)
+  .header
+    .title
+      padding-left: 0px
+
+    .description
+      padding-left: 0px
+
+@media (min-width: 1200px)
+  .header
+    .title
+      width: 1200px
+      margin-left: auto
+      margin-right: auto
+
+    .description
+      width: 1200px
+      display: block
+      margin-left: auto
+      margin-right: auto
