--- a/assets/css/2-home/2-subtitle.sass
+++ b/assets/css/2-home/2-subtitle.sass
@@ -1,12 +1,31 @@
 section.subtitle
-  background-color: $faded-bg
-  padding-top: 30px
-  padding-bottom: 30px
+  background-color: rgba(0, 0, 0, 0.02)
+  padding-top: 25px
+  padding-bottom: 25px
   margin: 0
+  position: relative
 
-  p.subtitle
-    margin: 0
-    text-align: center
-    color: rgba(0, 0, 0, 0.55)
-    font-size: 14px
-    line-height: 20px
+  img
+    opacity: 0.8
+    width: 200px
+    height: auto
+    position: absolute
+    left: 50%
+    top: 50%
+    @include transform(translate(-50%,-50%))
+
+@media (min-width: 768px)
+  section.subtitle
+    padding-top: 30px !important
+    padding-bottom: 30px !important
+    img
+      width: 250px
+      height: auto
+
+@media (min-width: 1000px)
+  section.subtitle
+    padding-top: 40px !important
+    padding-bottom: 40px !important
+    img
+      width: 380px
+      height: auto
