--- a/assets/css/2-home/6-footer.sass
+++ b/assets/css/2-home/6-footer.sass
@@ -1,26 +1,57 @@
 footer
   background:
     color: #333333
-  padding-bottom: 15px
+  padding-bottom: 25px
+  padding-top: 10px
 
   ul
-    display: block
+    display: flex
+    flex-direction: column
     margin: 0 auto
     padding: 0px
 
     li
-      padding-top: 15px
+      padding-top: 20px
       list-style-type: none
       text-align: center
 
-      a
-        font-size: 14px
-        text-align: center
-        text-decoration: none
-        color: white
+  a,
+  p
+    font-size: 16px
+    line-height: 24px
+    text-align: center
+    text-decoration: none
+    color: white
 
-      .faq
-        font-weight: bold
+  a:hover
+    opacity: .65
 
-      .copyright
-        color: rgba(255, 255, 255, 0.75)
+  .left
+    display: none
+
+  .faq
+    font-weight: bold
+
+  .copyright
+    color: rgba(255, 255, 255, 0.75)
+
+@media (min-width: 768px)
+  footer
+    padding-top: 8px
+    padding-bottom: 15px
+
+    .left
+      padding-bottom: 0px !important
+      padding-top: 5px !important
+      display: block
+      text-align: center
+
+    ul
+      max-width: 280px
+      flex-direction: row
+
+      li
+        margin: 0
+        padding: 0
+        &:last-child
+          display: none
