--- a/assets/css/2-home/home.sass
+++ b/assets/css/2-home/home.sass
@@ -1,19 +1,33 @@
 
 section
-  padding-left: 30px
-  padding-right: 30px
+  padding-left: 10px
+  padding-right: 10px
 
 h1.section-title
   font-family: 'Quicksand'
   text-transform: uppercase
-  font-size: 16px
+  font-size: 20px
   font-weight: bold
-  letter-spacing: -0.05px
-  line-height: 16px
+  letter-spacing: -0.65px
+  line-height: 24px
   text-align: center
   margin: 0
   padding-top: 20px
   padding-bottom: 20px
+
+@media (min-width: 500px)
+  section
+    padding-left: 30px
+    padding-right: 30px
+
+@media (min-width: 1000px)
+  section
+    padding-top: 30px
+    padding-bottom: 30px
+
+  h1.section-title
+    font-size: 24px
+    letter-spacing: 1px
 
 @import '1-header'
 @import '2-subtitle'
