addeds scripts and transition animations

--- a/_includes/subtitle.html
+++ b/_includes/subtitle.html
@@ -1,1 +1,1 @@
-<section class="subtitle"><img src="assets/images/idea.png"/></section>
+<section class="subtitle"><img src="assets/images/idea.png" id="subtitle-img"/></section>
