--- a/_jade/header.jade
+++ b/_jade/header.jade
@@ -1,10 +1,10 @@
 section.header
   div.title
-    div.logo
+    div.logo#logo
       img(src="assets/images/tambio-logo-small.png")
-    div.title-img
+    div.title-img#title-img
       img(src="assets/images/tambio.png")
-  div.description
+  div.description#description
     p An automatic raffle activation platform for both companies and customers
     
 
