--- a/_jade/how.jade
+++ b/_jade/how.jade
@@ -10,18 +10,18 @@ section.how
         h3 GET CUSTOMERS TO JOIN
         p Quisque mollis, erat ac tincidunt convallis, massa arcu auctor dui, non lobortis diam lacus quis dolor. Donec facilisis quis tellus vel faucibus. 
       
-    div.how-buttons
-      a(href='#')
+    div.how-buttons#how
+      a(href='#', data-id='create')
         div#button
           div.button-container
             i(class="icon ion-pricetags")
           h3 CREATE/ORGANIZE RAFFLE WITH TAMBIO
-      a(href='#')
+      a(href='#', data-id='get')
         div#button.active
           div.button-container
             i(class="icon ion-android-cart")
           h3 GET CUSTOMERS TO JOIN
-      a(href='#')
+      a(href='#', data-id='view')
         div#button
           div.button-container
             i(class="icon ion-stats-bars")
