--- a/assets/css/2-home/1-header.sass
+++ b/assets/css/2-home/1-header.sass
@@ -19,7 +19,7 @@
         height: 48px
         position: absolute
         left: 50%
-        @include transform(translateX(-50%))
+        transform: translateX(-50%)
 
     .title-img
       position: relative
@@ -29,7 +29,7 @@
         width: 186px
         position: absolute
         left: 50%
-        @include transform(translateX(-50%))
+        transform: translateX(-50%)
 
   .description
     p
