--- a/assets/css/2-home/2-subtitle.sass
+++ b/assets/css/2-home/2-subtitle.sass
@@ -12,7 +12,7 @@ section.subtitle
     position: absolute
     left: 50%
     top: 50%
-    @include transform(translate(-50%,-50%))
+    transform: translate(-50%,-50%)
 
 @media (min-width: 768px)
   section.subtitle
