--- a/_jade/featured.jade
+++ b/_jade/featured.jade
@@ -1,20 +1,20 @@
 section.featured
   h1.section-title Articles Featuring Tambio
   
-  ul.articles
-    a(href='#')
+  ul.articles#articles
+    a(href='http://www.dealstreetasia.com/stories/raffles-startup-tambio-takes-chance-expansion-2364/', target="_blank")
       li
         div.text 
           h3 DEAL Streat Asia
           p PH startup Tambio takes a chance on expansion
         
-    a(href='#')
+    a(href='http://business.inquirer.net/184807/local-startup-scene-gets-boost-from-ideaspace', target="_blank")
       li 
         div.text 
           h3 Inquirer
           p Local startup scene gets boost from IdeaSpace
         
-    a(href='#')
+    a(href='https://www.techinasia.com/ideaspace-2014-demo-day-startups', target="_blank")
       li 
         div.text 
           h3 Tech in Asia
