--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+    <script type="text/javascript" src="/assets/js/jquery-2.1.4.min.js" /></script>
+    <script type="text/javascript" src="/assets/js/script.js"></script>
   </head>
   <body>
 
