--- a/assets/css/2-home/3-how.sass
+++ b/assets/css/2-home/3-how.sass
@@ -49,6 +49,7 @@
 
         #button
           opacity: 0.5
+          transition: opacity 0.3s ease-in
 
           h3
             display: none
@@ -70,6 +71,8 @@
 
       .active
         opacity: 1 !important
+
+
 
 @media (min-width: 500px) and (max-width: 768px)
   .how
@@ -121,6 +124,8 @@
             display: flex
             padding-left: 10px
             border-radius: 64px
+            background-color: rgba(0, 0, 0, 0)
+            transition: background-color 0.3s ease-in-out
 
             h3
               display: block
@@ -142,8 +147,13 @@
               i
                 font-size: 48px
 
-        .active
-          background-color: rgba(0, 0, 0, 0.1)
+          .active
+            background-color: rgba(0, 0, 0, 0.1) !important
+
+          &:hover
+            #button
+              opacity: 0.9
+
 
 @media (min-width: 1000px)
   .how
