--- a/assets/css/2-home/1-header.sass
+++ b/assets/css/2-home/1-header.sass
@@ -119,12 +119,12 @@
 @media (min-width: 1200px)
   .header
     .title
-      width: 1200px
+      max-width: 1200px
       margin-left: auto
       margin-right: auto
 
     .description
-      width: 1200px
+      max-width: 1200px
       display: block
       margin-left: auto
       margin-right: auto
