--- a/assets/css/2-home/7-partner.sass
+++ b/assets/css/2-home/7-partner.sass
@@ -45,6 +45,8 @@
 
     ul.client-logos
       width: 80%
+      margin-left: auto
+      margin-right: auto
       justify-content: center
 
       li
@@ -54,7 +56,7 @@
         img
           max-width: 225px
           max-height: 60px
-          
+
 @media (min-width: 1000px)
   .partner
     padding-bottom: 80px
@@ -64,6 +66,8 @@
 
     ul.client-logos
       width: 1100px
+      margin-left: auto
+      margin-right: auto
       justify-content: center
 
       li
