--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -311,11 +311,11 @@ h1.section-title {
 
 @media (min-width: 1200px) {
   .header .title {
-    width: 1200px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto; }
   .header .description {
-    width: 1200px;
+    max-width: 1200px;
     display: block;
     margin-left: auto;
     margin-right: auto; } }
@@ -565,40 +565,40 @@ section.subtitle {
         text-decoration: underline; }
 
 @media (min-width: 500px) {
-  ul {
-    height: 140px;
+  .featured ul {
     width: 100%;
     display: block;
     margin-left: auto !important;
     margin-right: auto !important; }
-    ul a {
+    .featured ul a {
       display: block;
       margin-left: auto !important;
       margin-right: auto !important;
       width: 80%; }
-      ul a li {
+      .featured ul a li {
         display: block;
         margin-left: auto !important;
         margin-right: auto !important;
         width: 80%; }
-      ul a .text {
+      .featured ul a .text {
         width: auto;
         margin: 0px; } }
 
 @media (min-width: 768px) {
-  ul {
+  .featured ul {
+    height: 140px;
     width: 100%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex; }
-    ul li {
+    .featured ul li {
       width: -webkit-calc(100%/3);
       width: calc(100%/3);
       margin-top: 10px !important;
       border: none !important;
       margin-bottom: 20px; }
-      ul li .text {
+      .featured ul li .text {
         max-width: 380px; } }
 
 @media (min-width: 1000px) {
@@ -610,7 +610,7 @@ section.subtitle {
       font-size: 18px; } }
 
 @media (min-width: 1200px) {
-  ul {
+  .featured ul {
     max-width: 1200px; } }
 
 .contact {
@@ -814,6 +814,8 @@ footer {
     padding-bottom: 30px; }
     .partner ul.client-logos {
       width: 80%;
+      margin-left: auto;
+      margin-right: auto;
       -webkit-box-pack: center;
       -webkit-justify-content: center;
           -ms-flex-pack: center;
@@ -832,6 +834,8 @@ footer {
 @media (min-width: 1200px) {
   .partner ul.client-logos {
     width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
