fixed asset source links

--- a/_jade/how.jade
+++ b/_jade/how.jade
@@ -27,7 +27,7 @@ section.how
     
     div(data-id='create').data
       div.how-image 
-        img(src="/assets/images/app.png")
+        img(src="assets/images/app.png")
           
       div.how-description
         h3 CREATE/ORGANIZE RAFFLE WITH TAMBIO
@@ -35,7 +35,7 @@ section.how
     
     div(data-id='get').data
       div.how-image 
-        img(src="/assets/images/app.png")
+        img(src="assets/images/app.png")
           
       div.how-description
         h3 GET CUSTOMERS TO JOIN
@@ -44,7 +44,7 @@ section.how
 
       div(data-id='view').data
         div.how-image 
-          img(src="/assets/images/app.png")
+          img(src="assets/images/app.png")
             
         div.how-description
           h3 VIEW RAFFLE ANALYTICS REALTIME
