--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Welcome to Tambio!</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
-    <script type="text/javascript" src="/assets/js/jquery-2.1.4.min.js" /></script>
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-2.1.4.min.js" /></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
   </head>
   <body>
 
