assets source issue

--- a/_jade/header.jade
+++ b/_jade/header.jade
@@ -1,4 +1,4 @@
-section.header
+section.header(style="background-image: url('assets/images/tambio-header.jpg')") 
   div.title
     div.logo#logo
       img(src="assets/images/tambio-logo-small.png")
