--- a/_jade/contact.jade
+++ b/_jade/contact.jade
@@ -1,7 +1,7 @@
 section.contact 
   h1.section-title Get in Touch
 
-  form(id="contact_form", action="#", method="POST", enctype="multipart/form-data")
+  form(id="contact_form", action="https://formspree.io/maikko.aleman@gmail.com", method="POST", enctype="multipart/form-data")
     div.row
       input(id="name", class="input", name="name", type="text", placeholder="Your Name")
     div.row
@@ -11,3 +11,4 @@ section.contact
     div.row
       input(id="submit_button", type="submit", value="SEND MESSAGE") 
   
+ 
