Fixed typos and alignment error

--- a/_jade/featured.jade
+++ b/_jade/featured.jade
@@ -5,7 +5,7 @@ section.featured
     a(href='http://www.dealstreetasia.com/stories/raffles-startup-tambio-takes-chance-expansion-2364/', target="_blank")
       li
         div.text 
-          h3 DEAL Streat Asia
+          h3 DEAL Street Asia
           p PH startup Tambio takes a chance on expansion
         
     a(href='http://business.inquirer.net/184807/local-startup-scene-gets-boost-from-ideaspace', target="_blank")
