--- a/assets/css/2-home/6-footer.sass
+++ b/assets/css/2-home/6-footer.sass
@@ -49,6 +49,7 @@ footer
     ul
       max-width: 280px
       flex-direction: row
+      justify-content: space-between
 
       li
         margin: 0
