--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -764,7 +764,11 @@ footer {
       -webkit-box-direction: normal;
       -webkit-flex-direction: row;
           -ms-flex-direction: row;
-              flex-direction: row; }
+              flex-direction: row;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
       footer ul li {
         margin: 0;
         padding: 0; }
