--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Welcome to Tambio!</title>
     <meta name="viewport" content="width=device-width">
+    <meta name="google-site-verification" content="dfePD9XLEbH1-r4tXC8V8eg2te4ymb8e13Vvla-8puw" />
+    
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
