--- a/_jade/how.jade
+++ b/_jade/how.jade
@@ -1,26 +1,25 @@
 section.how
-  h1.section-title How does tambio work?
-  
+  h1.section-title your All-in-One raffle solution
+
   div.how-content
     div.how-details#how-details
-     
       
     div.how-buttons#how
       a(href='#', data-id='create')
         div#button
           div.button-container
-            i(class="icon ion-pricetags")
-          h3 CREATE/ORGANIZE RAFFLE WITH TAMBIO
-      a(href='#', data-id='get')
+            i(class="icon ion-android-contacts")
+          h3 FOR CUSTOMERS
+      a(href='#', data-id='get') 
         div#button.active
           div.button-container
-            i(class="icon ion-android-cart")
-          h3 GET CUSTOMERS TO JOIN
+            i(class="icon ion-pie-graph")
+          h3 FOR RAFFLE OPERATORS
       a(href='#', data-id='view')
         div#button
           div.button-container
-            i(class="icon ion-stats-bars")
-          h3 VIEW RAFFLE ANALYTICS REALTIME
+            i(class="icon ion-compose")
+          h3 FOR EVENTS
       
     
     // Data content for buttons
@@ -30,16 +29,16 @@ section.how
         img(src="assets/images/app.png")
           
       div.how-description
-        h3 CREATE/ORGANIZE RAFFLE WITH TAMBIO
-        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sollicitudin mollis lacus, eget semper massa malesuada ac. Mauris eleifend lectus et justo ultricies dapibus. Nunc tristique velit vitae lacinia interdum. Duis nec nulla congue, placerat lacus id, ultrices orci. Nullam arcu felis, fringilla ut feugiat non, tristique nec nisl.
+        h3 FOR CUSTOMERS
+        p Tambio makes the raffle joining fun and easy by combining both traditional and digital raffles (we call it hybrid!). Customers love the digital feel in joining the raffle and yet still feels familiar with the whole process of actually dropping their tickets in raffle drums.
     
     div(data-id='get').data
       div.how-image 
         img(src="assets/images/app.png")
           
       div.how-description
-        h3 GET CUSTOMERS TO JOIN
-        p Quisque mollis, erat ac tincidunt convallis, massa arcu auctor dui, non lobortis diam lacus quis dolor. Donec facilisis quis tellus vel faucibus.
+        h3 FOR RAFFLE OPERATORS
+        p Tambio makes raffle monitoring across different locations easy thru real-time analytics. Normally, paper-based raffles do not produce analytics for raffle operators, but with Tambio: it's magical! No more post raffle encoding as the raffle's data is available 24/7. Tambio's report generator is comprehensive with chats and graphs for easier data analysis.
 
 
       div(data-id='view').data
@@ -47,5 +46,5 @@ section.how
           img(src="assets/images/app.png")
             
         div.how-description
-          h3 VIEW RAFFLE ANALYTICS REALTIME
-          p Sed dignissim eu odio sed interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non dapibus nisi. Praesent vel eleifend orci. Ut egestas fermentum mi in porta. Nulla et condimentum mauris. Cras ullamcorper risus quis vestibulum dapibus.
+          h3 FOR EVENTS
+          p Tambio provides effective event registrations for companies. Tambio minimizes queueing and creates good first event impression for attendees.
