changed images to jpg

--- a/_jade/team.jade
+++ b/_jade/team.jade
@@ -3,25 +3,25 @@ section.team
 
   div.team-content
     div.team-member
-      .team-member-image(style="background-image:url('assets/images/team/morgan.png')")
+      .team-member-image(style="background-image:url('assets/images/team/morgan.jpg')")
       .team-member-details
         h3 Kenneth Morgan Nieto
         p.position Founder & CEO
         p Kenn has been in the billboard advertising business for 15 years. Tambio is a new venture for Kenn in the world of advertising. He leads the overall business strategy of Tambio.
     div.team-member
-      .team-member-image(style="background-image:url('assets/images/team/may.png')")
+      .team-member-image(style="background-image:url('assets/images/team/may.jpg')")
       .team-member-details
         h3 May Montero
         p.position Co-Founder & COO
         p May leads the day-to-day business operations and spearheads new business growth of Tambio. May holds BS in Banking & Finance from Lyceum of the Philippines.
     div.team-member
-      .team-member-image(style="background-image:url('assets/images/team/bong.png')")
+      .team-member-image(style="background-image:url('assets/images/team/bong.jpg')")
       .team-member-details
         h3 Romelio Tavas Jr
         p.position CTO
         p His background in software engineering made Tambio’s technological aspects possible and production ready. He is a graduate of Computer Engineering at the University of the Philippines Diliman and has won several technology competitions which fostered his innovative character.
     div.team-member
-      .team-member-image(style="background-image:url('assets/images/team/maikko.pngg')")
+      .team-member-image(style="background-image:url('assets/images/team/maikko.jpg')")
       .team-member-details
         h3 Maikko Aleman
         p.position Software Engineer
