--- a/_jade/how.jade
+++ b/_jade/how.jade
@@ -26,7 +26,7 @@ section.how
     
     div(data-id='create').data
       div.how-image 
-        img(src="assets/images/app.png")
+        img(src="assets/images/raffle.png")
           
       div.how-description
         h3 FOR CUSTOMERS
@@ -34,7 +34,7 @@ section.how
     
     div(data-id='get').data
       div.how-image 
-        img(src="assets/images/app.png")
+        img(src="assets/images/admin.png")
           
       div.how-description
         h3 FOR RAFFLE OPERATORS
@@ -43,7 +43,7 @@ section.how
 
       div(data-id='view').data
         div.how-image 
-          img(src="assets/images/app.png")
+          img(src="assets/images/events.png") 
             
         div.how-description
           h3 FOR EVENTS
