--- a/_jade/team.jade
+++ b/_jade/team.jade
@@ -19,7 +19,7 @@ section.team
       .team-member-details
         h3 Romelio Tavas Jr
         p.position CTO
-        p His background in software engineering made Tambio’s technological aspects possible and production ready. He is a graduate of Computer Engineering at the University of the Philippines Diliman and has won several technology competitions which fostered his innovative character.
+        p Romelio's background in software engineering made Tambio’s technological aspects possible and production ready. He is a graduate of Computer Engineering at the University of the Philippines Diliman and has won several technology competitions which fostered his innovative character.
     div.team-member
       .team-member-image(style="background-image:url('assets/images/team/maikko.jpg')")
       .team-member-details
