--- a/_jade/contact.jade
+++ b/_jade/contact.jade
@@ -7,6 +7,8 @@ section.contact
     div.row
       input(id="email", class="input", name="email", type="text", placeholder="Your Email")
     div.row
+      input(id="contact", class="input", name="contact", type="text", placeholder="Your Contact Number")
+    div.row
       textarea(id="message", class="input", name="message", rows="15", placeholder="Your Message")
     div.row
       input(id="submit_button", type="submit", value="SEND MESSAGE")
